@@ -3,6 +3,9 @@
 === New features
 * Added new @Pending annotation that can be used as a substitute for Ruby-Cucumber's #pending method. (Aslak Hellesøy)
 
+=== Changed features
+* Gem dependencies in Maven no longer use the form gem:version:source. rubyforge, github and gemcutter are always used. (Darrin Holst, Aslak Hellesøy)
+
 === Bugfixes
 * The @Before annotation of a superclass has no effect in a subclass. (Works now if superclass is abstract) (Aslak Hellesøy)
 * @Before tag should have optional scenario parameter (#11 Aslak Hellesøy, Henning Jensen)
